# synth

./: .bazelrc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BAZEL_INTEGRATION_RESEARCH.md  BAZEL_STATUS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  COMPARATIVE_ANALYSIS_WASKER_AURIX.md  COMPREHENSIVE_VALIDATION_REPORT.md  CONTINUATION_SESSION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DETAILED_TODOS.md  IMPLEMENTATION_PROGRESS.md  LICENSE  LOOM_ASIL_EVALUATION.md  MODULE.bazel  PHASE2C_F64_PLAN.md  PROJECT_STATUS.md  QUALIFIED_LLVM_TCO_REALITY_CHECK.md  README.md  REALITY_CHECK.md  RECOMMENDED_BUILD_ARCHITECTURE.md  ROADMAP.md  SAIL_FINDINGS_AND_STRATEGY.md  SAIL_INTEGRATION_PROGRESS.md  SECURITY.md  SESSION_PHASE2C_F64_SESSION2.md  SESSION_PHASE3A_SESSION2_FIX_COMPREHENSIVE.md  SESSION_SUMMARY.md  add.s  claims.yaml  clippy.toml  dune-project  flake.nix  rivet.yaml
bazel/constraints/: BUILD.bazel
bazel/features/: BUILD.bazel
compiler/: dune  synth_compile.ml
coq/: .lia.cache  .nia.cache  ArmInstructions.ml  ArmInstructions.mli  ArmSemantics.ml  ArmSemantics.mli  ArmState.ml  ArmState.mli  BUILD.bazel  Base.mli  BinInt.mli  BinPos.ml  BinPos.mli  Compilation.ml  DECISIONS.md  Integers.ml  Integers.mli  List0.mli  Makefile  NatDef.mli  PROOF_GUIDE.md  PeanoNat.ml  PosDef.mli  README.md  STATUS.md  WasmSemantics.ml  _CoqProject  check_vcr_sel_rules_coverage.sh  vcr_sel_rules.manifest
coq/Synth/ARM/: .ArmInstructions.aux  .ArmRefinement.aux  .ArmState.aux  ArmFlagLemmas.v  ArmInstructions.v  ArmRefinement.v  ArmSemantics.v  ArmState.v  SailArmBridge.v
coq/Synth/Common/: .Integers.aux  Base.v  Integers.v  StateMonad.v
coq/Synth/Extraction/: CompilerExtract.v
coq/Synth/Synth/: .Compilation.aux  .Correctness.aux  .CorrectnessConversions.aux  .CorrectnessF32.aux  .CorrectnessI64.aux  .CorrectnessMemory.aux  .Tactics.aux  Compilation.v  Correctness.v  CorrectnessComplete.v  CorrectnessConversions.v  CorrectnessF32.v  CorrectnessF64.v  CorrectnessI32.v  CorrectnessI64.v  CorrectnessI64Comparisons.v  CorrectnessMemory.v  CorrectnessSimple.v  Tactics.v  VcrSelExpansion.v  VcrSelPilot.v  VcrSelRules.v  VcrSelRulesGenCheck.v  VcrSelRulesGenerated.v
coq/Synth/WASM/: WasmCertBridge.v  WasmCertReference.v  WasmInstructions.v  WasmSemantics.v
coq/theories/ARM/: .ArmInstructions.aux  .ArmSemantics.aux  ArmInstructions.glob  ArmInstructions.v  ArmInstructions.vo  ArmRefinement.glob  ArmRefinement.vo  ArmSemantics.glob  ArmSemantics.v  ArmSemantics.vo  ArmState.glob  ArmState.v  ArmState.vo
coq/theories/Common/: .Base.aux  .Integers.aux  Base.glob  Base.v  Base.vo  Integers.glob  Integers.v  Integers.vo
coq/theories/Extraction/: .CompilerExtract.aux  CompilerExtract.glob  CompilerExtract.vo
coq/theories/Synth/: .Compilation.aux  .CorrectnessComplete.aux  .CorrectnessConversions.aux  .CorrectnessF64.aux  .CorrectnessI32.aux  .CorrectnessI64.aux  .CorrectnessI64Comparisons.aux  .CorrectnessSimple.aux  Compilation.glob  Compilation.v  Compilation.vo  Correctness.glob  Correctness.vo  CorrectnessComplete.glob  CorrectnessComplete.v  CorrectnessComplete.vo  CorrectnessConversions.glob  CorrectnessConversions.v  CorrectnessConversions.vo  CorrectnessF32.glob  CorrectnessF32.v  CorrectnessF32.vo  CorrectnessF64.glob  CorrectnessF64.vo  CorrectnessI32.glob  CorrectnessI32.v  CorrectnessI32.vo  CorrectnessI64.glob  CorrectnessI64.v  CorrectnessI64.vo  CorrectnessI64Comparisons.glob  CorrectnessI64Comparisons.v  CorrectnessI64Comparisons.vo  CorrectnessMemory.glob  CorrectnessMemory.vo  CorrectnessSimple.glob  CorrectnessSimple.v  CorrectnessSimple.vo  Tactics.glob  Tactics.v  (+1 more)
coq/theories/WASM/: .WasmInstructions.aux  .WasmSemantics.aux  .WasmValues.aux  WasmInstructions.glob  WasmInstructions.v  WasmInstructions.vo  WasmSemantics.glob  WasmSemantics.v  WasmSemantics.vo  WasmValues.glob  WasmValues.v  WasmValues.vo
crates/: BUILD.bazel
crates/synth-abi/: Cargo.toml
crates/synth-abi/src/: lib.rs  lift.rs  lower.rs  memory.rs  options.rs
crates/synth-analysis/: Cargo.toml
crates/synth-analysis/src/: callgraph.rs  lib.rs  memory.rs  ssa.rs
crates/synth-backend/: Cargo.toml
crates/synth-backend-aarch64/: Cargo.toml
crates/synth-backend-aarch64/src/: backend.rs  elf.rs  encoder.rs  lib.rs  selector.rs
crates/synth-backend-awsm/: Cargo.toml
crates/synth-backend-awsm/src/: lib.rs
crates/synth-backend-riscv/: Cargo.toml
crates/synth-backend-riscv/src/: alloc_validator.rs  backend.rs  elf_builder.rs  encoder.rs  lib.rs  linker_script.rs  pmp.rs  register.rs  riscv_op.rs  selector.rs  startup.rs
crates/synth-backend-riscv/tests/: cross_backend_op_parity.rs
crates/synth-backend-wasker/: Cargo.toml
crates/synth-backend-wasker/src/: lib.rs
crates/synth-backend/src/: cortex_m.rs  (+16 more)
crates/synth-cfg/: Cargo.toml
crates/synth-cli/: Cargo.toml
crates/synth-codegen/: Cargo.toml
crates/synth-core/: Cargo.toml
crates/synth-frontend/: Cargo.toml
crates/synth-memory/: Cargo.toml
crates/synth-opt/: Cargo.toml
crates/synth-qemu/: Cargo.toml
crates/synth-regalloc/: Cargo.toml
crates/synth-synthesis/: Cargo.toml
crates/synth-test/: Cargo.toml
crates/synth-verify/: Cargo.toml  README.md
crates/synth-wit/: Cargo.toml
examples/anti-pinch-controller/: CMakeLists.txt  README.md  anti_pinch.wat  prj.conf
examples/zephyr-calculator/: CMakeLists.txt  README.md  calculator.wat  prj.conf
examples/zephyr-poc/: CMakeLists.txt  README.md  prj.conf
fuzz/: Cargo.toml  README.md
fuzz/examples/: decode_crash.rs
fuzz/fuzz_targets/: encoder_no_panic.rs  i64_lowering_doesnt_clobber_params.rs  wasm_ops_lower_or_error.rs  wasm_to_ir_roundtrip_op_coverage.rs
fuzz/src/: common.rs  lib.rs
validation/: ArmInstructions.ml  ArmSemantics.ml  ArmState.ml  BinInt.ml  Compilation.ml  Datatypes.ml  Integers.ml  List0.ml  PosDef.ml  README.md  WasmInstructions.ml  WasmSemantics.ml  WasmValues.ml  comprehensive_suite.ml  dune  dune-project  poc_validator.md  simple_test.ml  test_driver.ml  validation_suite.ml
validation/test_cases/: simple_add.wat
(+793 files in other folders)
