[workspace]
members = [
    "crates/synth-cli",
    "crates/synth-core",
    "crates/synth-frontend",
    "crates/synth-analysis",
    "crates/synth-synthesis",
    "crates/synth-backend",
    "crates/synth-wit",
    "crates/synth-qemu",
    "crates/synth-abi",
    "crates/synth-cfg",
    "crates/synth-opt",
    "crates/synth-verify",
    "crates/synth-test",
    "crates/synth-memory",
    "crates/synth-backend-awsm",
    "crates/synth-backend-wasker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["PulseEngine Team"]
license = "Apache-2.0"
repository = "https://github.com/pulseengine/synth"
homepage = "https://github.com/pulseengine/synth"
keywords = ["webassembly", "arm", "cortex-m", "compiler", "embedded"]
categories = ["compilers", "embedded", "wasm", "no-std"]

[workspace.dependencies]
# WebAssembly tooling
wasmparser = "0.219"
wasm-encoder = "0.219"
wit-parser = "0.219"
wit-component = "0.219"
wat = "1.219"
wast = "219.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.4"

# ELF parsing
object = { version = "0.36", default-features = false, features = ["read", "elf"] }

# PulseEngine WASM optimizer (feature-gated in synth-cli)
# Uncomment when loom crate is published or available:
# loom-opt = { git = "https://github.com/pulseengine/loom.git" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
