"""
Synth - WebAssembly Component Synthesizer for Embedded Systems
Bazel module definition
"""

module(
    name = "synth",
    version = "0.1.0",
)

# Bazel dependencies
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_rust", version = "0.68.1")


# Rust toolchains
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.84.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Rust crates repository
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

# Core dependencies from Cargo.toml
crate.spec(package = "anyhow", version = "1.0")

# WebAssembly tooling (matching workspace versions)
crate.spec(package = "wasmparser", version = "0.219")
crate.spec(package = "wasm-encoder", version = "0.219")
crate.spec(package = "wit-parser", version = "0.219")
crate.spec(package = "wit-component", version = "0.219")
crate.spec(package = "wat", version = "1.219")
crate.spec(package = "wast", version = "219.0")
crate.spec(package = "wasmprinter", version = "0.2")

# Serialization
crate.spec(package = "serde", version = "1.0", features = ["derive"])
crate.spec(package = "serde_json", version = "1.0")
crate.spec(package = "toml", version = "0.8")

# Error handling
crate.spec(package = "thiserror", version = "1.0")

# CLI
crate.spec(package = "clap", version = "4.5", features = ["derive"])

# Logging
crate.spec(package = "tracing", version = "0.1")
crate.spec(package = "tracing-subscriber", version = "0.3")

# Verification dependencies
crate.spec(package = "z3", version = "0.12", features = ["static-link-z3"])

# Testing dependencies
crate.spec(package = "proptest", version = "1.4")
crate.spec(package = "quickcheck", version = "1.0")

# ELF parsing (for symbol table reading)
crate.spec(package = "object", version = "0.36", default_features = False, features = ["read", "elf"])

crate.from_specs()
use_repo(crate, "crates")

# PulseEngine WebAssembly Component Model rules
bazel_dep(name = "rules_wasm_component", version = "1.0.0")
git_override(
    module_name = "rules_wasm_component",
    remote = "https://github.com/pulseengine/rules_wasm_component.git",
    commit = "43468cd52f6a09523fc4df08d17e88f67f1cfd82",  # v1.0.0
)

# Renode simulation rules for embedded testing
# Provides hermetic Renode + Python - no local install required
# Using PulseEngine fork with macOS support
bazel_dep(name = "rules_renode", version = "0.0.0")
git_override(
    module_name = "rules_renode",
    remote = "https://github.com/pulseengine/renode-bazel-rules.git",
    commit = "cf0dcfa9338e235a076542154e9f95ece5092b11",  # feat/macos-support
)

# Renode toolchain - auto-downloads appropriate platform build
renode = use_extension("@rules_renode//renode:extensions.bzl", "renode")
use_repo(renode, "renode_toolchains")
register_toolchains("@renode_toolchains//:all")

# Rocq/Coq theorem proving rules with coq-of-rust integration
# Provides hermetic Coq toolchain for formal verification
# TODO: Enable when upstream BUILD file issue is fixed
# bazel_dep(name = "rules_rocq_rust", version = "0.1.0")
# git_override(
#     module_name = "rules_rocq_rust",
#     remote = "https://github.com/pulseengine/rules_rocq_rust.git",
#     commit = "f62262c250daaa64e6b67a931b6b1adb944e388d",
# )
