"""
Rocq 9 formal verification proofs for ASIL D qualification

This directory contains mechanized correctness proofs that:
1. WebAssembly semantics are correctly implemented
2. ARM semantics are correctly modeled
3. Compilation transformations preserve semantics
4. End-to-end compiler correctness (WASM instruction -> ARM instruction)

Proof status: 23 .v files, ~236 theorems, covering all 151 WASM Core 1.0 operations

Build: bazel build //coq:correctness_complete
Test:  bazel test //coq:verify_proofs
"""

package(default_visibility = ["//visibility:public"])

load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library", "rocq_proof_test")

# All Rocq source files (for genrule/validation)
filegroup(
    name = "rocq_sources",
    srcs = glob(["**/*.v"]),
)

# ─── Foundation ───────────────────────────────────────────────────────────────

rocq_library(
    name = "base",
    srcs = ["Synth/Common/Base.v"],
    include_path = "Synth",
)

# Integers and StateMonad both depend on Base but not on each other
rocq_library(
    name = "common",
    srcs = [
        "Synth/Common/Integers.v",
        "Synth/Common/StateMonad.v",
    ],
    include_path = "Synth",
    deps = [":base"],
)

# ─── ARM chain ────────────────────────────────────────────────────────────────
# Each file imports the previous: State → Instructions → Semantics → Refinement

rocq_library(
    name = "arm_state",
    srcs = ["Synth/ARM/ArmState.v"],
    include_path = "Synth",
    deps = [":common"],
)

rocq_library(
    name = "arm_instructions",
    srcs = ["Synth/ARM/ArmInstructions.v"],
    include_path = "Synth",
    deps = [":arm_state"],
)

rocq_library(
    name = "arm_semantics",
    srcs = ["Synth/ARM/ArmSemantics.v"],
    include_path = "Synth",
    deps = [":arm_instructions"],
)

rocq_library(
    name = "arm_flag_lemmas",
    srcs = ["Synth/ARM/ArmFlagLemmas.v"],
    include_path = "Synth",
    deps = [":arm_semantics"],
)

rocq_library(
    name = "arm_refinement",
    srcs = ["Synth/ARM/ArmRefinement.v"],
    include_path = "Synth",
    deps = [":arm_semantics"],
)

# ─── WASM chain ───────────────────────────────────────────────────────────────
# Each file imports the previous: Values → Instructions → Semantics

rocq_library(
    name = "wasm_values",
    srcs = ["Synth/WASM/WasmValues.v"],
    include_path = "Synth",
    deps = [":common"],
)

rocq_library(
    name = "wasm_instructions",
    srcs = ["Synth/WASM/WasmInstructions.v"],
    include_path = "Synth",
    deps = [":wasm_values"],
)

rocq_library(
    name = "wasm_semantics",
    srcs = ["Synth/WASM/WasmSemantics.v"],
    include_path = "Synth",
    deps = [":wasm_instructions"],
)

# ─── Compilation ──────────────────────────────────────────────────────────────
# Bridges ARM and WASM: imports ArmInstructions + WasmSemantics (not ArmSemantics)

rocq_library(
    name = "compilation",
    srcs = ["Synth/Synth/Compilation.v"],
    include_path = "Synth",
    deps = [":arm_instructions", ":wasm_semantics"],
)

# Tactics depends on Compilation + ArmSemantics
rocq_library(
    name = "tactics",
    srcs = ["Synth/Synth/Tactics.v"],
    include_path = "Synth",
    deps = [":compilation", ":arm_semantics"],
)

# ─── Correctness proofs ──────────────────────────────────────────────────────
# Split by dependency: some need Tactics, some don't.
# Files within each group don't import each other.

# Group A: depend on Compilation + ArmSemantics (no Tactics)
rocq_library(
    name = "correctness_core",
    srcs = [
        "Synth/Synth/Correctness.v",
        "Synth/Synth/CorrectnessSimple.v",
        "Synth/Synth/CorrectnessF32.v",
        "Synth/Synth/CorrectnessF64.v",
        "Synth/Synth/CorrectnessMemory.v",
        "Synth/Synth/CorrectnessI64Comparisons.v",
    ],
    include_path = "Synth",
    deps = [":compilation", ":arm_semantics"],
)

# Group B: depend on Tactics (which transitively provides Compilation)
rocq_library(
    name = "correctness_tactics",
    srcs = [
        "Synth/Synth/CorrectnessI32.v",
        "Synth/Synth/CorrectnessI64.v",
        "Synth/Synth/CorrectnessConversions.v",
    ],
    include_path = "Synth",
    deps = [":tactics", ":arm_flag_lemmas"],
)

# Master index: imports all correctness proofs
rocq_library(
    name = "correctness_complete",
    srcs = ["Synth/Synth/CorrectnessComplete.v"],
    include_path = "Synth",
    deps = [":correctness_core", ":correctness_tactics"],
)

# ─── Extraction ───────────────────────────────────────────────────────────────

rocq_library(
    name = "extraction",
    srcs = ["Synth/Extraction/CompilerExtract.v"],
    include_path = "Synth",
    deps = [":compilation", ":arm_semantics"],
)

# ─── Tests ────────────────────────────────────────────────────────────────────

rocq_proof_test(
    name = "verify_proofs",
    deps = [":correctness_complete", ":extraction", ":arm_refinement"],
)

# Validate proofs (lightweight — counts Admitted)
genrule(
    name = "validate_proofs",
    srcs = [":rocq_sources"],
    outs = ["validation_report.txt"],
    cmd = """
        echo "Synth Rocq Proof Validation Report" > $@
        echo "==================================" >> $@
        echo "" >> $@
        echo "Source files: $$(echo $(SRCS) | wc -w)" >> $@
        echo "" >> $@
        admitted=$$(grep -l "Admitted" $(SRCS) 2>/dev/null || echo "none")
        echo "Files with Admitted proofs: $$admitted" >> $@
        echo "" >> $@
        theorems=$$(grep -c "Theorem\\|Lemma\\|Corollary" $(SRCS) 2>/dev/null | awk -F: '{s+=$$2} END {print s}')
        echo "Total theorems/lemmas: $$theorems" >> $@
    """,
    tags = ["manual"],
)
